@@ -1,3 +1,9 @@
+2006-10-10  Johan Dahlin  <jdahlin@async.com.br>
+
+	* kiwi/i18n/i18n.py (compile_po_files): Unlink the old POTFILES.in in case
+	of an error. Check the result code of the pot generation, it may fail
+	if the encoding is inconsistent.
+
 === 1.9.11 ===
 2006-10-09  Johan Dahlin  <jdahlin@async.com.br>
 
